--- a/sayaslicer/CMakeLists.txt
+++ b/sayaslicer/CMakeLists.txt
@@ -14,3 +14,4 @@ target_link_libraries(sayaslicer PRIVATE imgui::imgui)
 target_link_libraries(sayaslicer PRIVATE ImGui-SFML::ImGui-SFML)
 target_link_libraries(sayaslicer PRIVATE implot::implot)
 target_link_libraries(sayaslicer PRIVATE tinyfiledialogs::tinyfiledialogs)
+target_link_libraries(sayaslicer PRIVATE clip)
