--- a/sayaslicer/CMakeLists.txt
+++ b/sayaslicer/CMakeLists.txt
@@ -15,3 +15,4 @@ target_link_libraries(sayaslicer PRIVATE ImGui-SFML::ImGui-SFML)
 target_link_libraries(sayaslicer PRIVATE implot::implot)
 target_link_libraries(sayaslicer PRIVATE tinyfiledialogs::tinyfiledialogs)
 target_link_libraries(sayaslicer PRIVATE clip)
+target_link_libraries(sayaslicer PRIVATE cereal::cereal)
