Added midi file import

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,5 @@ set(CLIP_TESTS OFF CACHE BOOL "Compile clip tests")
 
 # Incluez les sous-projets.
 add_subdirectory ("include/clip")
+add_subdirectory ("include/midifile")
 add_subdirectory ("sayaslicer")
