--- a/sayaslicer/CMakeLists.txt
+++ b/sayaslicer/CMakeLists.txt
@@ -16,3 +16,4 @@ target_link_libraries(sayaslicer PRIVATE implot::implot)
 target_link_libraries(sayaslicer PRIVATE tinyfiledialogs::tinyfiledialogs)
 target_link_libraries(sayaslicer PRIVATE clip)
 target_link_libraries(sayaslicer PRIVATE cereal::cereal)
+target_link_libraries(sayaslicer PRIVATE midifile)
