fix attempt for macos

--- a/sayaslicer/CMakeLists.txt
+++ b/sayaslicer/CMakeLists.txt
@@ -9,6 +9,9 @@ add_executable (sayaslicer "sayaslicer.cpp" "sayaslicer.h" "bmseclipboard.hpp" "
 # TODO: Ajoutez des tests et installez des cibles si nécessaire.
 target_link_options(sayaslicer PRIVATE ${SUBSYSTEM_LINKER_OPTIONS})
 target_compile_features(sayaslicer PRIVATE cxx_std_17)
+if (APPLE)
+    target_link_libraries(sayaslicer "-framework CoreAudio")
+endif()
 target_link_libraries(sayaslicer PRIVATE sfml-audio)
 target_link_libraries(sayaslicer PRIVATE imgui::imgui)
 target_link_libraries(sayaslicer PRIVATE ImGui-SFML::ImGui-SFML)
