--- a/sayaslicer/CMakeLists.txt
+++ b/sayaslicer/CMakeLists.txt
@@ -11,6 +11,8 @@ target_link_options(sayaslicer PRIVATE ${SUBSYSTEM_LINKER_OPTIONS})
 target_compile_features(sayaslicer PRIVATE cxx_std_17)
 if (APPLE)
     target_link_libraries(sayaslicer PRIVATE "-framework CoreAudio")
+    target_link_libraries(sayaslicer PRIVATE "-framework AudioUnit")
+    target_link_libraries(sayaslicer PRIVATE "-framework AudioToolbox")
 endif()
 target_link_libraries(sayaslicer PRIVATE sfml-audio)
 target_link_libraries(sayaslicer PRIVATE imgui::imgui)
