added auto update check

--- a/sayaslicer/CMakeLists.txt
+++ b/sayaslicer/CMakeLists.txt
@@ -28,3 +28,5 @@ target_link_libraries(sayaslicer PRIVATE clip)
 target_link_libraries(sayaslicer PRIVATE cereal::cereal)
 target_link_libraries(sayaslicer PRIVATE midifile)
 target_link_libraries(sayaslicer PRIVATE i18n_keyval)
+target_link_libraries(sayaslicer PRIVATE cpr::cpr)
+target_link_libraries(sayaslicer PRIVATE nlohmann_json::nlohmann_json)
