--- a/sayaslicer/CMakeLists.txt
+++ b/sayaslicer/CMakeLists.txt
@@ -30,3 +30,4 @@ target_link_libraries(sayaslicer PRIVATE midifile)
 target_link_libraries(sayaslicer PRIVATE i18n_keyval)
 target_link_libraries(sayaslicer PRIVATE cpr::cpr)
 target_link_libraries(sayaslicer PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(sayaslicer PRIVATE Iconv::Iconv)
