--- a/sayaslicer/CMakeLists.txt
+++ b/sayaslicer/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required (VERSION 3.8)
 string(TIMESTAMP VERSIONDATE "%Y-%m-%d")
 
 # Ajoutez une source à l'exécutable de ce projet.
-add_executable (sayaslicer "sayaslicer.cpp" "sayaslicer.hpp" "bmseclipboard.hpp" "theme.hpp" "custom_widgets.hpp" "settings.hpp" "marker.hpp" "base_convert.hpp" "selection.hpp" "history.hpp" "audio.hpp" "utils.hpp" "waveform.hpp" "project.hpp" "midi.hpp" "copy_paste.hpp" "audio.cpp" "base_convert.cpp" "utils.cpp" "bmseclipboard.cpp" "copy_paste.cpp" "custom_widgets.cpp" "history.cpp" "marker.cpp" "midi.cpp" "project.cpp" "selection.cpp" "theme.cpp" "waveform.cpp" "preferences.hpp" "preferences.cpp" "translations.hpp" "translations.cpp" "notifications.hpp" "about.cpp" "markdown.hpp" "markdown.cpp")
+add_executable (sayaslicer WIN32 "sayaslicer.cpp" "sayaslicer.hpp" "bmseclipboard.hpp" "theme.hpp" "custom_widgets.hpp" "settings.hpp" "marker.hpp" "base_convert.hpp" "selection.hpp" "history.hpp" "audio.hpp" "utils.hpp" "waveform.hpp" "project.hpp" "midi.hpp" "copy_paste.hpp" "audio.cpp" "base_convert.cpp" "utils.cpp" "bmseclipboard.cpp" "copy_paste.cpp" "custom_widgets.cpp" "history.cpp" "marker.cpp" "midi.cpp" "project.cpp" "selection.cpp" "theme.cpp" "waveform.cpp" "preferences.hpp" "preferences.cpp" "translations.hpp" "translations.cpp" "notifications.hpp" "about.cpp" "markdown.hpp" "markdown.cpp" "console.hpp" "console.cpp")
 target_compile_definitions(sayaslicer PRIVATE VERSIONDATE="${VERSIONDATE}")
 
 target_link_libraries(sayaslicer PRIVATE git_version)
@@ -19,6 +19,7 @@ if (APPLE)
     target_link_libraries(sayaslicer PRIVATE "-framework AudioUnit")
     target_link_libraries(sayaslicer PRIVATE "-framework AudioToolbox")
 endif()
+target_link_libraries(sayaslicer PRIVATE sfml-main)
 target_link_libraries(sayaslicer PRIVATE sfml-audio)
 target_link_libraries(sayaslicer PRIVATE imgui::imgui)
 target_link_libraries(sayaslicer PRIVATE ImGui-SFML::ImGui-SFML)
