fix compilation on mac and linux

--- a/sayaslicer/CMakeLists.txt
+++ b/sayaslicer/CMakeLists.txt
@@ -18,8 +18,9 @@ if (APPLE)
     target_link_libraries(sayaslicer PRIVATE "-framework CoreAudio")
     target_link_libraries(sayaslicer PRIVATE "-framework AudioUnit")
     target_link_libraries(sayaslicer PRIVATE "-framework AudioToolbox")
+elseif (WIN32)
+    target_link_libraries(sayaslicer PRIVATE sfml-main)
 endif()
-target_link_libraries(sayaslicer PRIVATE sfml-main)
 target_link_libraries(sayaslicer PRIVATE sfml-audio)
 target_link_libraries(sayaslicer PRIVATE imgui::imgui)
 target_link_libraries(sayaslicer PRIVATE ImGui-SFML::ImGui-SFML)
