--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         run: sudo apt-get install libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev pkg-config
         if: matrix.os == 'ubuntu-latest'
 
-      - uses: lukka/get-cmake@latest
+      - uses: lukka/get-cmake@v3.31.7
 
       - name: Setup vcpkg
         uses: lukka/run-vcpkg@v11.5
