Fix linux / mac compilation attempt (4)

--- a/sayaslicer/CMakeLists.txt
+++ b/sayaslicer/CMakeLists.txt
@@ -13,12 +13,12 @@ if (APPLE)
     target_link_libraries(sayaslicer PRIVATE "-framework CoreAudio")
     target_link_libraries(sayaslicer PRIVATE "-framework AudioUnit")
     target_link_libraries(sayaslicer PRIVATE "-framework AudioToolbox")
-endif()
-IF (WIN32)
+    target_link_libraries(sayaslicer PRIVATE glfw OpenGL::GL)
+elseif (WIN32)
     target_link_libraries(sayaslicer PRIVATE glfw opengl32.lib)
-ELSE()
+else()
 	target_link_libraries(sayaslicer PRIVATE glfw OpenGL)
-ENDIF()
+endif()
 target_link_libraries(sayaslicer PRIVATE imgui::imgui)
 target_link_libraries(sayaslicer PRIVATE implot::implot)
 target_link_libraries(sayaslicer PRIVATE tinyfiledialogs::tinyfiledialogs)
