Fix linux / mac compilation attempt (5)

--- a/sayaslicer/CMakeLists.txt
+++ b/sayaslicer/CMakeLists.txt
@@ -10,14 +10,14 @@ target_link_libraries(sayaslicer PRIVATE git_version)
 target_link_options(sayaslicer PRIVATE ${SUBSYSTEM_LINKER_OPTIONS})
 target_compile_features(sayaslicer PRIVATE cxx_std_17)
 if (APPLE)
-    target_link_libraries(sayaslicer PRIVATE "-framework CoreAudio")
-    target_link_libraries(sayaslicer PRIVATE "-framework AudioUnit")
-    target_link_libraries(sayaslicer PRIVATE "-framework AudioToolbox")
-    target_link_libraries(sayaslicer PRIVATE glfw OpenGL::GL)
+    #target_link_libraries(sayaslicer PRIVATE "-framework CoreAudio")
+    #target_link_libraries(sayaslicer PRIVATE "-framework AudioUnit")
+    #target_link_libraries(sayaslicer PRIVATE "-framework AudioToolbox")
+    target_link_libraries(sayaslicer PRIVATE glfw OpenGL::GL portaudio_static)
 elseif (WIN32)
-    target_link_libraries(sayaslicer PRIVATE glfw opengl32.lib)
+    target_link_libraries(sayaslicer PRIVATE glfw opengl32.lib portaudio)
 else()
-	target_link_libraries(sayaslicer PRIVATE glfw OpenGL)
+	target_link_libraries(sayaslicer PRIVATE glfw OpenGL portaudio_static)
 endif()
 target_link_libraries(sayaslicer PRIVATE imgui::imgui)
 target_link_libraries(sayaslicer PRIVATE implot::implot)
@@ -30,7 +30,6 @@ target_link_libraries(sayaslicer PRIVATE cpr::cpr)
 target_link_libraries(sayaslicer PRIVATE nlohmann_json::nlohmann_json)
 target_link_libraries(sayaslicer PRIVATE Iconv::Iconv)
 target_link_libraries(sayaslicer PRIVATE SndFile::sndfile)
-target_link_libraries(sayaslicer PRIVATE portaudio)
 
 # Copy translations to dest folder
 file(COPY "../lang" DESTINATION .)
